# reporting

./: .gitignore  Makefile  README.md  alembic.ini  app.py  pyproject.toml  report  report.bat  requirements.dev.txt  requirements.txt
hooks/: pre-commit
src/: PrintAbstract.py  PrintConsole.py  PrintToFile.py  Transform.py  app.py
src/config/: config.py
src/config_app/: __init__.py  class_config.py  config_main.py  dictionary.py  jira_config.py  reporting_config.py
src/helpers/: time.py
src/jira/: jira.py
src/models/: kind.py  project.py  report.py  task.py
src/print_objects/: __init__.py  print_abstract.py  print_console.py  print_to_file.py
src/reporting/: __main__.py  api.py  categories.py  cli.py  common.py  database.py  models.py  projects.py  report.py  tasks.py  user.py
src/reporting/api/: api.py  categories.py  positions.py  projects.py  report.py  user.py
src/reporting/config/: __init__.py  app.py  reporting.py
src/reporting/config_app/: __init__.py  app.py  class_config.py  jira_config.py
src/reporting/migrations/: env.py
src/reporting/migrations/versions/: bb4138ae3afb_init.py
src/reporting/models/: kind.py  project.py  report.py  task.py
src/reporting/qatestlab_portal/: __init__.py
src/reporting/qatestlab_portal/reporting/: __init__.py  api.py  client.py  models.py  repositories.py
src/reporting/services/: file_parse.py  jira.py  reporting.py
src/reporting/services/reporting/: actions.py  api.py
src/reporting/services/reporting/models/: corp_struct_items.py  positions.py
src/reporting/site/: site.py
src/services/: file_parse.py  jira.py
src/services/file_parse/: __init__.py  file_parse.py  task_line.py
src/services/jira/: jira.py
src/services/kind/: __init__.py  kind.py
src/services/project/: project.py
src/services/reporting/: actions.py  api.py  common.py  reporting.py  tasks.py
src/services/reporting/api/: __init__.py  api.py  categories.py  positions.py  projects.py  report.py  user.py
src/services/reporting/models/: report.py
src/transform/: __init__.py  day_data.py  task.py  transform.py
tests/: conftest.py  factories.py
tests/feature/: test_kinds.py  test_parse.py  test_projects.py  test_send_jira.py  test_send_reporting.py  test_show.py
tests/unit/: test_models.py
tests/unit/models/: test_kind.py  test_project.py  test_report.py  test_task.py
tests/unit/services/: test_file_parse.py  test_jira.py
tests/unit/services/file_parse/: test_file_parse.py
