[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dependencies = [
    'alembic==1.14.*',
    'jira == 3.8.*',
    'python-dateutil == 2.9.*',
    'requests == 2.32.*',
    'SQLAlchemy == 2.0.*',
]
name = "reporting"
requires-python = ">=3.10"
version = "1.4.4"

[project.optional-dependencies]
dev = [
    "black",
    "factory_boy",
    "Faker",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-responses",
    "responses",
    "types-python-dateutil",
    "types-requests",
]

[project.scripts]
reporting = "reporting.cli:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = ["factory", "responses"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
minversion = "8.0"
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true
