[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
dynamic = ["dependencies", "optional-dependencies"]
name = "reporting"
requires-python = ">=3.12"
version = "1.4.4"

[project.scripts]
reporting = "reporting.cli:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
reportUnusedImport = true
typeCheckingMode = "standard"
useLibraryCodeForTypes = true

[[tool.mypy.overrides]]
module = ["factory", "responses"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements.dev.txt"] } }
