[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "reporting"
requires-python = ">=3.12"
version = "1.4.4"
dependencies = [
    "alembic==1.14.*",
    "jira==3.8.*",
    "python-dateutil==2.9.*",
    "requests==2.32.*",
    "sqlalchemy==2.0.*",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "factory-boy>=3.3.3",
    "faker>=37.3.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "pyright>=1.1.401",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-responses>=0.5.1",
    "responses>=0.25.7",
    "types-python-dateutil>=2.9.0.20250516",
    "types-requests>=2.32.0.20250602",
]

[project.scripts]
reporting = "reporting.cli:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
reportUnusedImport = true
typeCheckingMode = "standard"
useLibraryCodeForTypes = true

[[tool.mypy.overrides]]
module = ["factory", "responses"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

